phase2_Dev/src/objects/Standard_Transaction_Process_Rule__c.object
<CustomObject>
    <fields>
        <fullName>API_Name_of_field_to_be_Tested__c</fullName>
        <inlineHelpText>API name of the field that must be tested. Needs to be a True / False field. If the value of this field is &quot;False&quot; then the message will be appended to the field associated to the process step associated with this rule.</inlineHelpText>
        <label>API Name of field to be Tested</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_If_Field_False__c</fullName>
        <inlineHelpText>Contains the message that will be displayed on the field for the licensor to know what to do</inlineHelpText>
        <label>Message If Field False</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Standard Transaction Process Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Standard Transaction Process Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Transaction Process Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>